# VideoRAG

./: .gitignore  README.md
backend/: check_db.py  check_errors.py  cleanup_indices.py  debug_qwen.py  diagnose_errors.py  diagnose_video_scoping.py  inspect_video_frames.py  main.py  models_checking.py  pyproject.toml  reset_db.py  schema.py  test_pipeline.py  test_upload.py  verify_compat.py
frontend/src/app/: page.tsx
mcp_server/: server.py
