[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "av>=17.1.0",
    "fastapi>=0.138.1",
    "fastmcp>=3.4.4",
    "google-genai>=2.10.0",
    "httpx>=0.28.1",
    "mcp>=1.28.1",
    "moviepy>=2.2.1",
    "openai-whisper>=20250625",
    "pixeltable[all]>=0.6.6",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "sentence-transformers>=2.7.0",
    "transformers==4.51.3",
    "uvicorn>=0.49.0",
]
